397: fix alignment affecting other activity items.

--- a/app/assets/stylesheets/components/programmes/_exam-activity.scss
+++ b/app/assets/stylesheets/components/programmes/_exam-activity.scss
@@ -1,4 +1,5 @@
 .ncce-exam-activity__remarks  {
+  grid-column-end: span 3;
   display: flex;
   justify-content: space-around;
   flex-wrap: nowrap;
@@ -42,7 +43,7 @@
   }
 }
 
-.ncce-activity-list__item-text {
+.ncce-exam-activity__attempts-text {
   grid-column-end: span 3;
 }
 
